# statistics_cw

./: pyproject.toml
calcs/: lab.ipynb  my_lab.ipynb
data/: example.csv  yarovoy_var.ods
