[tool.poetry]
name = "calcs"
version = "0.1.0"
description = ""
authors = ["VYAR <vadim.d.yarovoy@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
statistics = "^1.0.3.5"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
